Implement reactions list

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -180,6 +180,7 @@ media:
         other: "Other"
       reactions:
         header: "Reactions"
+        more: "View More Reactions"
         sorts:
           -upVotesCount: "Popular"
           -createdAt: "Recent"
