--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -241,6 +241,8 @@ media:
           the anime {title}}
         manga {The following is a full list of characters for the manga {title}}
         other {}}"
+    reactions:
+      loading: "Loading Reactions..."
 # page: users
 users:
   navigation:
