Add reactions ticker

--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -184,6 +184,7 @@ media:
         sorts:
           -upVotesCount: "Popular"
           -createdAt: "Recent"
+        new: "New Reaction"
       characters:
         header: "Characters"
         more: "View all characters"
