--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -185,6 +185,7 @@ media:
           -upVotesCount: "Popular"
           -createdAt: "Recent"
         new: "New Reaction"
+        edit: "My Reaction"
       characters:
         header: "Characters"
         more: "View all characters"
