--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -854,6 +854,11 @@ group-list:
     recent: "Recent Activity"
     newest: "Newest Groups"
     oldest: "Oldest Groups"
+# component: modals/media-reaction
+reaction-modal:
+  post: "Post"
+  edit: "Edit"
+  edit-warning: "Careful! Editing will delete your upvotes."
 # component: library-entry/*
 library-entry:
   state:
